# PAROL-Web-Commander

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  PAROL6-python-API  README.md  REVIEW.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  tests.yml
app/: __init__.py  config.py  constants.py  main.py  requirements.txt  state.py  theme.py
app/common/: logging_config.py  theme.py
app/pages/: calibrate.py  gripper.py  io.py  move.py  settings.py
app/services/: __init__.py  robot_client.py  server_manager.py
docs/: index.md
docs/guides/: api-reference.md  backend-development.md  writing-programs.md
guides/api-reference/: index.html
guides/backend-development/: index.html
guides/writing-programs/: index.html
parol_commander/: constants.py  main.py  numba_pipelines.py  robot_interface.py  state.py
parol_commander/common/: logging_config.py  loop_timer.py  theme.py
parol_commander/components/: control.py  editor.py  file_operations.py  gripper.py  help_menu.py  io.py  playback.py  playback_overlay.py  readout.py  settings.py
parol_commander/pages/: calibrate.py  gripper.py  io.py  move.py  settings.py
parol_commander/profiles/: __init__.py
parol_commander/services/: __init__.py  camera_service.py  dry_run_client.py  keybindings.py  motion_recorder.py  path_preview_client.py  path_visualizer.py  robot_client.py  script_runner.py  stepping_bootstrap.py  stepping_client.py  timeline.py  urdf_scene.py
parol_commander/services/urdf_scene/: __init__.py  angle_pipeline.py  config.py  editing_mixin.py  editing_mode_mixin.py  envelope_mixin.py  ik_solver.py  loader.py  path_renderer_mixin.py  target_editor_mixin.py  tcp_controls_mixin.py  urdf_scene.py
parol_commander/static/js/: panel-resize.js
programs/: demo_showcase.py  draw_circle.py  precision.py  speed_comparison.py  zigzag_scan.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_app_smoke.py  test_camera_service.py  test_control_panel_jogging.py  test_control_panel_modes_and_estop.py  test_control_rate_benchmark.py  test_control_rate_benchmark_stream.py  test_e2e_rate.py  test_editor_completions.py  test_editor_integration.py  test_editor_interactivity.py  test_editor_regressions.py  test_editor_tabs.py  test_editor_visualization.py  test_file_operations.py  test_gizmo_enablement_behavior.py  test_headless_jog_modes.py  test_headless_rate.py  test_help_menu.py  test_io_and_gripper.py  test_joint_target_editor.py  test_keybindings.py  test_panel_resize.py  test_programs.py  test_scene_diff_rendering.py  test_script_runner.py  test_settings_page.py  test_simulation_services.py  test_simulation_ui.py  test_stepping.py  test_tcp_transform_controls.py  test_tcp_transform_controls_ui.py  test_timeline.py  test_tool_system.py  test_ui_enablement_behavior.py  test_urdf_scene.py  test_urdf_scene_context_menu.py  test_urdf_scene_ui.py  test_webapp_rate.py
tests/helpers/: __init__.py  browser_helpers.py  fakes.py  types.py  wait.py
tests/utils/: rate.py  types.py  udp_ack.py
waldo_commander/: __init__.py  constants.py  main.py  state.py
waldo_commander/common/: logging_config.py  theme.py
waldo_commander/components/: control.py  editor.py  editor_decorations.py  file_operations.py  gripper.py  help_menu.py  io.py  log_panel.py  playback.py  readout.py  script_execution.py  settings.py  simulation_engine.py
waldo_commander/profiles/: __init__.py
waldo_commander/services/: command_discovery.py  keybindings.py  motion_recorder.py  path_preview_client.py  path_visualizer.py  script_runner.py  stepping_bootstrap.py  stepping_client.py  timeline.py
waldo_commander/services/urdf_scene/: __init__.py  angle_pipeline.py  config.py  editing_controller.py  editing_mixin.py  envelope_mixin.py  envelope_renderer.py  ik_solver.py  loader.py  path_renderer.py  path_renderer_mixin.py  tcp_controls_mixin.py  urdf_scene.py
waldo_commander/static/js/: keybindings.js  panel-resize.js  robot-faces.js
