[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parol-commander"
version = "1.0.0"
description = "Web interface for PAROL robot control"
requires-python = ">=3.11"
dependencies = [
  "nicegui @ git+https://github.com/Jepson2k/nicegui.git@feature/additional_scene_features",
  "python-dotenv>=1.0.0",
  "urchin>=0.0.27",
  "scipy>=1.10",
  "xxhash>=3.0.0",
  "pyserial>=3.5",
  "numpy-stl>=3.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio", "pytest-timeout", "pytest-xdist", "pre-commit", "selenium"]

[project.scripts]
parol-commander = "parol_commander.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parol_commander*"]

[tool.setuptools.package-data]
parol_commander = ["static/**/*"]

[tool.mypy]
files = ["parol_commander"]
ignore_missing_imports = true
namespace_packages = false

[[tool.mypy.overrides]]
module = ["parol6", "parol6.*", "roboticstoolbox", "roboticstoolbox.*", "spatialmath", "spatialmath.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nicegui", "nicegui.*"]
ignore_errors = true

# ---- Pytest configuration ----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # show short test summary for all but passes
    "-p nicegui.testing.user_plugin",
]
# Global per-test timeout
timeout = 30
timeout_method = "thread"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "rate: Control-rate cadence tests",
    "module_under_test: NiceGUI main module under test for the user fixture",
    "browser: Browser tests requiring Selenium",
]
# nicegui.testing expects a path to the app's entrypoint for the user fixture
main_file = "parol_commander/main.py"
log_cli = false
log_level = "DEBUG"
