[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "waldo-commander"
version = "2.0.0"
description = "A web interface for controlling robotic arms"
requires-python = ">=3.12"
dependencies = [
  "nicegui @ git+https://github.com/Jepson2k/nicegui.git@feature/additional_scene_features",
  "python-dotenv>=1.0.0",
  "urchin>=0.0.27",
  "scipy>=1.10",
  "xxhash>=3.0.0",
  "pyserial>=3.5",
  "numpy-stl>=3.0.0",
  "waldoctl @ git+https://github.com/Jepson2k/waldoctl.git@v0.2.0",
  "opencv-python-headless>=4.8",

  # pinokin: Pinocchio-based FK/IK bindings
  # https://github.com/Jepson2k/pinokin/releases/tag/v0.1.5

  # macOS ARM64 (Apple Silicon)
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp311-cp311-macosx_15_0_arm64.whl ; python_version == '3.11' and platform_system == 'Darwin' and platform_machine == 'arm64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp312-cp312-macosx_15_0_arm64.whl ; python_version == '3.12' and platform_system == 'Darwin' and platform_machine == 'arm64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp313-cp313-macosx_15_0_arm64.whl ; python_version == '3.13' and platform_system == 'Darwin' and platform_machine == 'arm64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp314-cp314-macosx_15_0_arm64.whl ; python_version == '3.14' and platform_system == 'Darwin' and platform_machine == 'arm64'",

  # Windows AMD64
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp311-cp311-win_amd64.whl ; python_version == '3.11' and platform_system == 'Windows' and platform_machine == 'AMD64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp312-cp312-win_amd64.whl ; python_version == '3.12' and platform_system == 'Windows' and platform_machine == 'AMD64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp313-cp313-win_amd64.whl ; python_version == '3.13' and platform_system == 'Windows' and platform_machine == 'AMD64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp314-cp314-win_amd64.whl ; python_version == '3.14' and platform_system == 'Windows' and platform_machine == 'AMD64'",

  # Linux x86_64
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp311-cp311-manylinux_2_39_x86_64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'x86_64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp312-cp312-manylinux_2_39_x86_64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'x86_64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp313-cp313-manylinux_2_39_x86_64.whl ; python_version == '3.13' and platform_system == 'Linux' and platform_machine == 'x86_64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp314-cp314-manylinux_2_39_x86_64.whl ; python_version == '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",

  # Linux aarch64 (ARM64)
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp311-cp311-manylinux_2_39_aarch64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'aarch64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp312-cp312-manylinux_2_39_aarch64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'aarch64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp313-cp313-manylinux_2_39_aarch64.whl ; python_version == '3.13' and platform_system == 'Linux' and platform_machine == 'aarch64'",
  "pinokin @ https://github.com/Jepson2k/pinokin/releases/download/v0.1.5/pinokin-0.1.5-cp314-cp314-manylinux_2_39_aarch64.whl ; python_version == '3.14' and platform_system == 'Linux' and platform_machine == 'aarch64'",
]

[project.optional-dependencies]
parol6 = ["parol6 @ git+https://github.com/Jepson2k/PAROL6-python-API.git@v0.2.3"]
v4l2 = ["linuxpy>=0.24"]
dev = [
  "parol6 @ git+https://github.com/Jepson2k/PAROL6-python-API.git@v0.2.3",
  "ruff",
  "ty",
  "pytest",
  "pytest-asyncio",
  "pytest-timeout",
  "pytest-xdist",
  "pre-commit",
  "selenium",
  # linuxpy is needed by the v4l2 camera backend; install it on Linux
  # so ty can resolve the import in waldo_commander/services/camera_service.py
  "linuxpy>=0.24; sys_platform == 'linux'",
]

[project.scripts]
waldo-commander = "waldo_commander.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waldo_commander*"]

[tool.setuptools.package-data]
waldo_commander = ["static/**/*"]

[tool.ty.environment]
extra-paths = ["PAROL6-python-API"]

# Release tooling: `tbump <new_version>` edits pyproject.toml, commits, tags
# and pushes (main + tag) in one shot. Install with `pip install tbump`.
[tool.tbump]
github_url = "https://github.com/Jepson2k/Waldo-Commander"

[tool.tbump.version]
current = "2.0.0"
regex = '''(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'''

[tool.tbump.git]
message_template = "bump version to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

# ---- Pytest configuration ----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--junitxml=test-results.xml",
    "-p nicegui.testing.user_plugin",
]
# Global per-test timeout (90s to accommodate JIT warmup and teardown on slow CI runners)
timeout = 90
timeout_method = "thread"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "rate: Control-rate cadence tests",
    "module_under_test: NiceGUI main module under test for the user fixture",
    "browser: Browser tests requiring Selenium",
]
# nicegui.testing expects a path to the app's entrypoint for the user fixture
main_file = "waldo_commander/main.py"
log_cli = false
log_level = "DEBUG"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
